[gd_scene load_steps=16 format=2]

[ext_resource path="res://fonts/Gotu/Gotu-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/InGameMenu.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 18
font_data = ExtResource( 1 )

[node name="InGameMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="InGameMenuLayer" type="CanvasLayer" parent="."]

[node name="InGameMenuBackground" type="Panel" parent="InGameMenuLayer"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InGameMenuContainer" type="VBoxContainer" parent="InGameMenuLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -133.5
margin_right = 130.0
margin_bottom = 133.5
custom_constants/separation = 25
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamePaused" type="Label" parent="InGameMenuLayer/InGameMenuContainer"]
margin_right = 260.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game Paused"
align = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="InGameMenuLayer/InGameMenuContainer"]
margin_top = 86.0
margin_right = 260.0
margin_bottom = 304.0

[node name="Continue" type="Button" parent="InGameMenuLayer/InGameMenuContainer/ButtonsContainer"]
margin_right = 260.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
text = "Continue"

[node name="Settings" type="Button" parent="InGameMenuLayer/InGameMenuContainer/ButtonsContainer"]
margin_top = 37.0
margin_right = 260.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )
text = "Settings"

[node name="SaveGame" type="Button" parent="InGameMenuLayer/InGameMenuContainer/ButtonsContainer"]
margin_top = 74.0
margin_right = 260.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 3 )
text = "Save Game"

[node name="RetryLevel" type="Button" parent="InGameMenuLayer/InGameMenuContainer/ButtonsContainer"]
margin_top = 111.0
margin_right = 260.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 3 )
text = "Retry Level"

[node name="ExitMainMenu" type="Button" parent="InGameMenuLayer/InGameMenuContainer/ButtonsContainer"]
margin_top = 148.0
margin_right = 260.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 3 )
text = "Exit To Main Menu"

[node name="ExitGame" type="Button" parent="InGameMenuLayer/InGameMenuContainer/ButtonsContainer"]
margin_top = 185.0
margin_right = 260.0
margin_bottom = 218.0
custom_fonts/font = SubResource( 3 )
text = "Exit Game"

[node name="SettingsPanel" type="Panel" parent="InGameMenuLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsTitle" type="Label" parent="InGameMenuLayer/SettingsPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.5
margin_top = -100.0
margin_right = 57.5
margin_bottom = -52.0
custom_fonts/font = SubResource( 4 )
text = "Settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsNames" type="VBoxContainer" parent="InGameMenuLayer/SettingsPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -41.0
margin_right = -7.0
margin_bottom = 41.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Label" parent="InGameMenuLayer/SettingsPanel/SettingsNames"]
margin_right = 123.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 5 )
text = "Music"
align = 2

[node name="SoundEffects" type="Label" parent="InGameMenuLayer/SettingsPanel/SettingsNames"]
margin_top = 51.0
margin_right = 123.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 6 )
text = "Sound Effects"
align = 2

[node name="SettingsButtons" type="VBoxContainer" parent="InGameMenuLayer/SettingsPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 5.00002
margin_top = -47.0
margin_right = 81.0
margin_bottom = 45.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="CheckButton" parent="InGameMenuLayer/SettingsPanel/SettingsButtons" groups=[
"InGameSettings",
]]
margin_right = 76.0
margin_bottom = 40.0

[node name="SoundEffects" type="CheckButton" parent="InGameMenuLayer/SettingsPanel/SettingsButtons" groups=[
"InGameSettings",
]]
margin_top = 52.0
margin_right = 76.0
margin_bottom = 92.0

[node name="BackToMenu" type="Button" parent="InGameMenuLayer/SettingsPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -59.5
margin_top = -70.0
margin_right = 59.5
margin_bottom = -37.0
custom_fonts/font = SubResource( 7 )
text = "Back to Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuConfirmationPanel" type="Panel" parent="InGameMenuLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmMainMenu" type="VBoxContainer" parent="InGameMenuLayer/MenuConfirmationPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -75.5
margin_right = 200.0
margin_bottom = 75.5
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToMenuDialog" type="Label" parent="InGameMenuLayer/MenuConfirmationPanel/ConfirmMainMenu"]
margin_right = 400.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 8 )
text = "Are you sure you want
to exit to Main Menu?"
align = 1

[node name="ToMenuContainer" type="HBoxContainer" parent="InGameMenuLayer/MenuConfirmationPanel/ConfirmMainMenu"]
margin_top = 111.0
margin_right = 400.0
margin_bottom = 151.0
custom_constants/separation = 40
alignment = 1

[node name="NoMenu" type="Button" parent="InGameMenuLayer/MenuConfirmationPanel/ConfirmMainMenu/ToMenuContainer"]
margin_left = 110.0
margin_right = 180.0
margin_bottom = 40.0
rect_min_size = Vector2( 70, 40 )
custom_fonts/font = SubResource( 9 )
text = "NO"

[node name="YesMenu" type="Button" parent="InGameMenuLayer/MenuConfirmationPanel/ConfirmMainMenu/ToMenuContainer"]
margin_left = 220.0
margin_right = 290.0
margin_bottom = 40.0
rect_min_size = Vector2( 70, 40 )
custom_fonts/font = SubResource( 10 )
text = "YES"

[node name="ExitConfirmationPanel" type="Panel" parent="InGameMenuLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmExit" type="VBoxContainer" parent="InGameMenuLayer/ExitConfirmationPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -75.5
margin_right = 90.0
margin_bottom = 75.5
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitDialog" type="Label" parent="InGameMenuLayer/ExitConfirmationPanel/ConfirmExit"]
margin_right = 180.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 11 )
text = "Are you sure you
want to exit?"
align = 1

[node name="ExitContainer" type="HBoxContainer" parent="InGameMenuLayer/ExitConfirmationPanel/ConfirmExit"]
margin_top = 111.0
margin_right = 180.0
margin_bottom = 151.0
custom_constants/separation = 40
alignment = 1

[node name="NoExit" type="Button" parent="InGameMenuLayer/ExitConfirmationPanel/ConfirmExit/ExitContainer"]
margin_right = 70.0
margin_bottom = 40.0
rect_min_size = Vector2( 70, 40 )
custom_fonts/font = SubResource( 12 )
text = "NO"

[node name="YesExit" type="Button" parent="InGameMenuLayer/ExitConfirmationPanel/ConfirmExit/ExitContainer"]
margin_left = 110.0
margin_right = 180.0
margin_bottom = 40.0
rect_min_size = Vector2( 70, 40 )
custom_fonts/font = SubResource( 13 )
text = "YES"
[connection signal="pressed" from="InGameMenuLayer/InGameMenuContainer/ButtonsContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="InGameMenuLayer/InGameMenuContainer/ButtonsContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="InGameMenuLayer/InGameMenuContainer/ButtonsContainer/RetryLevel" to="." method="_on_RetryLevel_pressed"]
[connection signal="pressed" from="InGameMenuLayer/InGameMenuContainer/ButtonsContainer/ExitMainMenu" to="." method="_on_ExitMainMenu_pressed"]
[connection signal="pressed" from="InGameMenuLayer/InGameMenuContainer/ButtonsContainer/ExitGame" to="." method="_on_ExitGame_pressed"]
[connection signal="pressed" from="InGameMenuLayer/SettingsPanel/SettingsButtons/Music" to="." method="_on_Music_pressed"]
[connection signal="pressed" from="InGameMenuLayer/SettingsPanel/SettingsButtons/SoundEffects" to="." method="_on_SoundEffects_pressed"]
[connection signal="pressed" from="InGameMenuLayer/SettingsPanel/BackToMenu" to="." method="_on_BackToMenu_pressed"]
[connection signal="pressed" from="InGameMenuLayer/MenuConfirmationPanel/ConfirmMainMenu/ToMenuContainer/NoMenu" to="." method="_on_NoMenu_pressed"]
[connection signal="pressed" from="InGameMenuLayer/MenuConfirmationPanel/ConfirmMainMenu/ToMenuContainer/YesMenu" to="." method="_on_YesMenu_pressed"]
[connection signal="pressed" from="InGameMenuLayer/ExitConfirmationPanel/ConfirmExit/ExitContainer/NoExit" to="." method="_on_NoExit_pressed"]
[connection signal="pressed" from="InGameMenuLayer/ExitConfirmationPanel/ConfirmExit/ExitContainer/YesExit" to="." method="_on_YesExit_pressed"]
